VDR Plugin 'elvis' Revision History
------------------------------------

2010-08-13: Version 0.0.1

- Initial revision.

2010-08-xx: Version 0.0.2

- Added support for Saunavisio.